Se actualizan dependencias para node superior a 20.0 y se avaza dia 12

--- a/src/view/index.pug
+++ b/src/view/index.pug
@@ -20,12 +20,13 @@ html(lang="en")
                 +cardAnimacion('DIA 11')
 
             .card
-                include dias/diaDiez.pug
+                include dias/diasDoce.pug
                 +cardAnimacion('DIA 12')
             
             .card
                 include dias/diaDiez.pug
                 +cardAnimacion('DIA 13')
+        script(src="https://kit.fontawesome.com/b18f93f57c.js" crossorigin="anonymous")
 
 
     
