--- a/src/styles/diasReto/diaDoce.scss
+++ b/src/styles/diasReto/diaDoce.scss
@@ -16,7 +16,6 @@
         margin: 0 auto;
         color: white;
         font-size: 24px;
-        outline: 1px solid red;
 
         &-author{
             margin-top: 20px;
@@ -39,17 +38,33 @@
         line-height: 20px;
         background-color: #286F8A;
         line-height: 1;
+
+        &:hover{
+            .modal{
+                opacity: 1;
+                transform: translateY(20px);
+            }
+        }
+    }
+
+    &::before{
+        content: '"';
+        font-size: 100px;
+        display: block;
+        background-color: #6AC2E3;
     }
     
 }
 
 .modal{
     position: absolute;
-    top: -130px;
+    top: -150px;
     left: -60px;    
     font-size: 15px;
     width: 250px;
     box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.2);
+    opacity: 0;
+    transition: all .8s ease;
 
     &__pronounce{
         display: block;
@@ -67,5 +82,16 @@
         display: block;
         background-color: #286F8A;
         padding: 10px 20px;
+    }
+
+    &::after{
+        content: '';
+        position: absolute;
+        bottom: -8px;
+        left: 50%;
+        transform: translateX(-50%);
+        border-left: 8px solid transparent;
+        border-right: 8px solid transparent;
+        border-top: 10px solid #286F8A;
     }
 }
