--- a/src/view/index.pug
+++ b/src/view/index.pug
@@ -7,6 +7,7 @@ html(lang="en")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         link(rel="preconnect" href="https://fonts.googleapis.com")
         link(rel="preconnect" href="https://fonts.gstatic.com" crossorigin)
+        link(rel="stylesheet", href="./app.css")
         link(href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet")
         title Document
     body.color_gray
@@ -26,6 +27,7 @@ html(lang="en")
             .card
                 include dias/diaDiez.pug
                 +cardAnimacion('DIA 13')
+        script(src="./script.js")
         script(src="https://kit.fontawesome.com/b18f93f57c.js" crossorigin="anonymous")
 
 
